testsuite/tests/partial-sigs/should_compile/Uncurry.hs
{-# LANGUAGE PartialTypeSignatures #-}
module Uncurry where

unc :: (_ -> _ -> _) -> (_, _) -> _
unc = uncurry
