testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardNotLast.hs
{-# LANGUAGE PartialTypeSignatures #-}
module ExtraConstraintsWildcardNotLast where

foo :: (_, Eq a) => a -> a
foo = undefined
